# ric

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml  main.yml  rust.yml
src/: docker.rs  main.rs
tests/: integration_tests.rs
