[package]
name = "ric"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
assert_cmd = "2.0.10"
clap = { version = "4.1.11", features = ["derive"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
docker-api = "0.12.1"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
users = "0.11.0"
