[package]
name = "ric"
version = "0.1.2"
edition = "2021"
description = "A simple tool to run commands inside a container"
license-file = "LICENSE"
authors = ["Tyler Mayoff"]
repository = "https://github.com/tmayoff/ric"
homepage = "https://github.com/tmayoff/ric"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
assert_cmd = "2.0.10"
async-std = { version = "1.12.0", features = ["tokio1"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
ctrlc = { version = "3.2.5", features = ["termination"] }
docker-api = "0.14.0"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
thiserror = "1.0.40"
users = "0.11.0"
